# waifu-cli

./: .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: rust.yml
src/: api.rs  main.rs
