[package]
name = "waifu"
version = "0.1.6"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.29"
zeroize = "1.7"
bytes = "1.5"
rand = "0.8"
serde_json = "1.0"
